workloads/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30088
      name: http
  selector:
    app: vaultwarden
